syntax = "proto3";

package nbastats;

option java_package = "com.digitald4.nbastats.proto";
option java_outer_classname = "NBAStatsProtos";

message Player {
  int64 id = 1;
  string season = 2;
  int32 player_id = 3;
  string name = 4;
  string aka = 5;
}

message GameLog {
  int32 player_id = 1;
  string season = 2;
  string date = 3;
  double points = 4;
  double rebounds = 5;
  double assists = 6;
  double blocks = 7;
  double steals = 8;
  double made3s = 9;
  double turnovers = 10;
  double double_doubles = 11;
  double triple_doubles = 12;
  map<string, double> fantasy_site_points = 13;
}

enum Position {
  POS_UNKNOWN = 0;
  PG = 1;
  SG = 2;
  SF = 3;
  PF = 4;
  C = 5;
}

message PlayerDay {
  int64 id = 1;
  int32 player_id = 2;
  string date = 3;
  string name = 4;

  enum Status {
    STATUS_UNKNOWN = 0;
    ACTIVE = 1;
    IN_ACTIVE = 2;
    INJURIED = 3;
    QUESTIONABLE = 4;
  }
  Status status = 5;
  string team = 6;
  string opponent = 7;

  message FantasySiteInfo {
    // The positions this player can play.
    repeated Position position = 1;
    // The salary cost of this player.
    int32 cost = 2;
    // What the player is projected to score.
    map<string, double> projection = 3;
    // What the player actually scored on this day.
    double actual = 4;
  }
  map<string, FantasySiteInfo> fantasy_site_info = 8;
  bool low_data_warn = 9;
}

message LineUp {
  int64 id = 1;
  string date = 2;
  string fantasy_site = 3;
  string projection_method = 4;
  double total_salary = 5;
  double projected = 6;
  double actual = 7;
  repeated int32 player_id = 8;
  bool selected = 9;
}

message ProcessStatsRequest {
  string date = 1;
}